--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -77,10 +77,13 @@ main {
     margin: 0 auto;
 }
 
+section {
+    margin-top: 130px;
+}
+
 /* about seciton styles */
 .about {
     text-align: center;
-    margin-top: 130px;
     background: #FFF8F3;
     border-radius: 10px;
     padding: 130px 150px;
@@ -89,6 +92,7 @@ main {
 .section-title {
     font-weight: 700;
     font-size: 35px;
+    text-align: center;
     margin-bottom: 30px;
 }
 
@@ -113,3 +117,35 @@ main {
     font-size: 20px;
     color: #474747;
 }
+
+/* What i do styles */
+
+
+.skill {
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill-title {
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.skill-description {
+    color: #757575;
+}
+
+.about-description {
+    margin: 0 50px;
+}
+
+/* Resume Styles */
